laboratorios/03-rede/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
  namespace: curso
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 8000 # EntryPoint interno do Traefik; Service 80 encaminha para 8000.
      allowedRoutes:
        namespaces:
          from: Same
