laboratorios/03-rede/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
  namespace: curso
spec:
  parentRefs:
    - name: web-gateway
      sectionName: web
  hostnames:
    - gateway.curso.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web
          port: 80
